# holoself-os

./: .env.example  .gitignore  index.html  package-lock.json  package.json  session-checkpoint-2026-02-26.md  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  gemini.rs  health.rs  mod.rs  scheduler.rs  settings.rs  setup.rs  system.rs  vitamin_d.rs  voice.rs
src-tauri/src/db/: mod.rs
src-tauri/src/services/: cartesia.rs  mod.rs  native_tts.rs  scheduler.rs  vitamin_d.rs  whisper.rs
src/components/avatar/: HoloScene.tsx
src/components/health/: BlinkRateWidget.tsx  PostureWidget.tsx  ScheduleWidget.tsx  VitaminDWidget.tsx  WpmWidget.tsx
src/components/hud/: AgentPanel.tsx  ErrorBoundary.tsx  HudOverlay.tsx  Icons.tsx  JarvisHud.tsx  LoadingSkeleton.tsx  SettingsPanel.tsx  Toast.tsx  VoiceOrb.tsx
src/components/setup/: SetupWizard.tsx
src/hooks/: useConversationMode.ts  useDailySummary.ts  useGlobalHotkey.ts  useHealthContext.ts  useKeystrokeWpm.ts  usePostureMonitor.ts  usePresenceDetector.ts  useVoiceListener.ts
src/stores/: agentStore.ts
src/styles/: global.css
src/types/: health.ts
