[package]
name = "holoself-os"
version = "0.2.0"
description = "HoloSelf OS — AI Health Agent with Holographic HUD"
authors = ["Guilherme Rocha"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "holoself_os_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
